--- a/server/matthan/Gemfile
+++ b/server/matthan/Gemfile
@@ -2,6 +2,7 @@ source 'https://rubygems.org'
 ruby '2.2.1'
 
 gem 'mongoid', '5.1.3'
+gem 'thin', '0.7.1'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.6'
