--- a/server/matthan/Gemfile
+++ b/server/matthan/Gemfile
@@ -3,6 +3,7 @@ ruby '2.2.1'
 
 gem 'mongoid', '5.1.3'
 gem 'thin', '0.7.1'
+gem 'therubyracer', '0.12.2'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.6'
