--- a/server/matthan/Gemfile
+++ b/server/matthan/Gemfile
@@ -4,6 +4,10 @@ ruby '2.2.1'
 gem 'mongoid', '5.1.3'
 gem 'thin', '1.7.0'
 gem 'therubyracer', '0.12.2'
+gem 'jquery-rails', '4.1.1'
+gem 'bootstrap-sass', '3.3.6'
+gem 'momentjs-rails', '2.11.1'
+gem 'bootstrap3-datetimepicker-rails', '4.17.37'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.6'
@@ -16,8 +20,6 @@ gem 'coffee-rails', '~> 4.1.0'
 # See https://github.com/rails/execjs#readme for more supported runtimes
 # gem 'therubyracer', platforms: :ruby
 
-# Use jquery as the JavaScript library
-gem 'jquery-rails'
 # Turbolinks makes following links in your web application faster. Read more: https://github.com/rails/turbolinks
 gem 'turbolinks'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
