--- a/server/matthan/Gemfile
+++ b/server/matthan/Gemfile
@@ -2,7 +2,7 @@ source 'https://rubygems.org'
 ruby '2.2.1'
 
 gem 'mongoid', '5.1.3'
-gem 'thin', '1.7.0'
+gem 'puma', '3.4.0'
 gem 'therubyracer', '0.12.2'
 gem 'jquery-rails', '4.1.1'
 gem 'bootstrap-sass', '3.3.6'
